--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 # BlueJ files
 *.ctxt
 
+# IntelliJ files
+.idea/
+out/
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -17,6 +21,9 @@
 *.zip
 *.tar.gz
 *.rar
+
+# Maven Build files
+target/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
