--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.twasi</groupId>
-    <artifactId>twasi-core</artifactId>
+    <artifactId>TwasiCore</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    
+
 </project>
