--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,14 @@
     <artifactId>TwasiCore</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <!-- Log4J -->
+        <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>1.2.17</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
