--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,27 @@
                 <artifactId>log4j</artifactId>
                 <version>1.2.17</version>
         </dependency>
+        <!-- SnakeYML -->
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.18</version>
+        </dependency>
+        <!-- ObjectMapper -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+        <!-- YAMLFactory -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
+
+
     </dependencies>
 
 
