+ Another docker test

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ services:
   - docker
 
 before_install:
-- docker pull maven
-- docker run -it --rm --name twasi-core -v "$PWD":/usr/src/mymaven -w /usr/src/mymaven maven:3.2-jdk-7 mvn clean compile assembly:single
+- docker run -it --rm -v "$(pwd)":/opt/maven -w /opt/maven maven:3.2-jdk-7 mvn clean compile assembly:single
 #- docker run -d -p 127.0.0.1:80:4567 carlad/sinatra /bin/sh -c "cd /root/sinatra; bundle exec foreman start;"
 #- docker ps -a
 #- docker run carlad/sinatra /bin/sh -c "cd /root/sinatra; bundle exec rake test"
