--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,4 @@ sudo: required
 services:
   - docker
 
-before_install:
-- docker run -it --rm -v "$(pwd)":/opt/maven -w /opt/maven maven:3.2-jdk-7 mvn clean compile assembly:single
-#- docker run -d -p 127.0.0.1:80:4567 carlad/sinatra /bin/sh -c "cd /root/sinatra; bundle exec foreman start;"
-#- docker ps -a
-#- docker run carlad/sinatra /bin/sh -c "cd /root/sinatra; bundle exec rake test"
-
-script: mvn clean compile assembly:single
+script: mvn clean compile assembly:single docker:build
