--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,8 @@
                             <include>${project.build.finalName}-jar-with-dependencies.jar</include>
                         </resource>
                     </resources>
+                    <serverId>docker-hub</serverId>
+                    <registryUrl>https://index.docker.io/v1/</registryUrl>
                 </configuration>
             </plugin>
         </plugins>
