--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,10 @@ jobs:
   include:
     - stage: build
       script:
-        - sonar-scanner
-        - "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn clean compile assembly:single docker:build"
+        - "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn clean compile sonar:sonar assembly:single docker:build"
     - stage: deploy
       script:
-        - sonar-scanner
-        - "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn clean compile assembly:single docker:build -DpushImage"
+        - "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn clean compile sonar:sonar assembly:single docker:build -DpushImage"
 
 stages:
   - build
