--- a/pom.xml
+++ b/pom.xml
@@ -104,5 +104,11 @@
             <artifactId>gson</artifactId>
             <version>2.8.2</version>
         </dependency>
+        <!-- CFG4J -->
+        <dependency>
+            <groupId>org.cfg4j</groupId>
+            <artifactId>cfg4j-core</artifactId>
+            <version>4.4.1</version>
+        </dependency>
     </dependencies>
 </project>
