--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -15,3 +15,6 @@ log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 # log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p- %m%n
+
+# Apache HttpClient
+log4j.logger.org.apache.http=WARN
