+ Fixed syntax in travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
 jobs:
   include:
     - stage: tests
+      script:
         - "mvn surefire:test sonar:sonar"
     - stage: build
       script:
