+ Added Jacoco for Coverage testing

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
                     <registryUrl>https://index.docker.io/v1/</registryUrl>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.5.201505241946</version>
+            </plugin>
         </plugins>
     </build>
 
