--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ jobs:
   include:
     - stage: tests
       script:
-        - "jacoco:prepare-agent surefire:test jacoco:report sonar:sonar"
+        - "mvn jacoco:prepare-agent surefire:test jacoco:report sonar:sonar"
     - stage: build
       script:
         - "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn clean compile sonar:sonar assembly:single docker:build"
