--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -13,8 +13,7 @@ log4j.appender.file.File=twasi.log
 log4j.appender.file.MaxFileSize=20MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
-# log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p- %m%n
 
 # Apache HttpClient
-log4j.logger.org.apache.http=WARN
+log4j.logger.org.apache.http=ERROR
