+ Change target path to allow the use of volumes

--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
                     <!-- copy the service's jar file from target into the root directory of the image -->
                     <resources>
                         <resource>
-                            <targetPath>/</targetPath>
+                            <targetPath>/home/twasi</targetPath>
                             <directory>${project.build.directory}</directory>
                             <include>${project.build.finalName}-jar-with-dependencies.jar</include>
                         </resource>
