--- a/pom.xml
+++ b/pom.xml
@@ -157,5 +157,11 @@
             <artifactId>guava</artifactId>
             <version>23.6-jre</version>
         </dependency>
+        <!-- Mailer -->
+        <dependency>
+            <groupId>org.simplejavamail</groupId>
+            <artifactId>simple-java-mail</artifactId>
+            <version>4.4.5</version><!-- 5.0.0.rc2-SNAPSHOT in OSS snapshots repo -->
+        </dependency>
     </dependencies>
 </project>
