--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -14,3 +14,5 @@ log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p- %m%n
 # Apache HttpClient
 log4j.logger.org.apache.http=ERROR
+# Spring RestClient
+log4j.logger.org.springframework=ERROR
