+ Add YouTube API

--- a/pom.xml
+++ b/pom.xml
@@ -245,5 +245,12 @@
             <version>2.1</version>
         </dependency>
 
+        <!-- YouTube API -->
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-youtube</artifactId>
+            <version>v3-rev192-1.23.0</version>
+        </dependency>
+
     </dependencies>
 </project>
