--- a/pom.xml
+++ b/pom.xml
@@ -178,25 +178,13 @@
         <dependency>
             <groupId>io.prometheus</groupId>
             <artifactId>simpleclient</artifactId>
-            <version>0.1.0</version>
+            <version>0.5.0</version>
         </dependency>
-        <!-- Hotspot JVM metrics-->
+        <!-- Servlet -->
         <dependency>
             <groupId>io.prometheus</groupId>
-            <artifactId>simpleclient_hotspot</artifactId>
-            <version>0.1.0</version>
-        </dependency>
-        <!-- Exposition HTTPServer-->
-        <dependency>
-            <groupId>io.prometheus</groupId>
-            <artifactId>simpleclient_httpserver</artifactId>
-            <version>0.1.0</version>
-        </dependency>
-        <!-- Pushgateway exposition-->
-        <dependency>
-            <groupId>io.prometheus</groupId>
-            <artifactId>simpleclient_pushgateway</artifactId>
-            <version>0.1.0</version>
+            <artifactId>simpleclient_servlet</artifactId>
+            <version>0.5.0</version>
         </dependency>
 
         <!-- GraphQL -->
