adapt to use new api

--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,17 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.8.0-beta2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.8.0-beta2</version>
+        </dependency>
+
         <!-- SnakeYML -->
         <dependency>
             <groupId>org.yaml</groupId>
@@ -216,14 +227,9 @@
 
         <!-- Twitch API -->
         <dependency>
-            <groupId>com.github.twitch4j</groupId>
-            <artifactId>twitch4j</artifactId>
-            <version>v0.10.0</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.2.1</version>
+            <groupId>net.twasi</groupId>
+            <artifactId>twitch-web-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <!-- PircBotX -->
