--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,14 +4,14 @@ log4j.rootLogger=DEBUG, stdout, file
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p- %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p- %c - %m%n
 # Redirect log messages to a log file, support file rolling.
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.File=twasi.log
 log4j.appender.file.MaxFileSize=20MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p- %m%n
+log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p- %c - %m%n
 # Apache HttpClient
 log4j.logger.org.apache.http=ERROR
 # Spring RestClient
