--- a/pom.xml
+++ b/pom.xml
@@ -202,17 +202,17 @@
         <dependency>
             <groupId>com.graphql-java</groupId>
             <artifactId>graphql-java</artifactId>
-            <version>7.0</version>
+            <version>12.0</version>
         </dependency>
         <dependency>
-            <groupId>com.graphql-java</groupId>
+            <groupId>com.graphql-java-kickstart</groupId>
             <artifactId>graphql-java-tools</artifactId>
-            <version>4.3.0</version>
+            <version>5.6.0</version>
         </dependency>
         <dependency>
-            <groupId>com.graphql-java</groupId>
+            <groupId>com.graphql-java-kickstart</groupId>
             <artifactId>graphql-java-servlet</artifactId>
-            <version>4.7.0</version>
+            <version>7.5.0</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
