--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.twasi</groupId>
     <artifactId>TwasiCore</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>LIVE-SNAPSHOT</version>
 
     <build>
         <plugins>
