--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.twasi</groupId>
     <artifactId>TwasiCore</artifactId>
-    <version>LIVE-SNAPSHOT</version>
+    <version>LIVE</version>
 
     <build>
         <plugins>
@@ -86,11 +86,11 @@
     </repositories>
 
     <distributionManagement>
-        <snapshotRepository>
-            <id>snapshots</id>
-            <name>75d64b6ca878-snapshots</name>
-            <url>https://artifactory.twasi.net/artifactory/libs-snapshot-local</url>
-        </snapshotRepository>
+        <repository>
+            <id>release</id>
+            <name>artifactory-release</name>
+            <url>https://artifactory.twasi.net/artifactory/libs-release-local</url>
+        </repository>
     </distributionManagement>
 
     <dependencies>
