move to github actions, use artifactory

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,4 +14,6 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      run: mvn clean compile assembly:single
+      run:
+        - "sed -i \"s/LIVE/${TRAVIS_BUILD_NUMBER}/g\" pom.xml"
+        - "mvn -q -B -s maven-settings.xml clean compile assembly:single deploy"
