--- a/.travis.old.yml
+++ b/.travis.old.yml
@@ -18,17 +18,12 @@ jobs:
         - "mvn clean compile assembly:single"
     - stage: deploy-docker-dev
       script:
-        - "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn clean compile assembly:single docker:build -DpushImage"
+        - "cp maven-settings.xml $HOME/.m2/settings.xml && mvn clean compile assembly:single docker:build -DpushImage"
     - stage: deploy-dev
       script:
         - "sed -i \"s/LIVE/${TRAVIS_BUILD_NUMBER}/g\" pom.xml"
-        - "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn clean compile assembly:single deploy"
+        - "cp maven-settings.xml $HOME/.m2/settings.xml && mvn clean compile assembly:single deploy"
 
 stages:
-#  - tests
-#  - build
-#  - name: deploy-docker-dev
-#    if: branch = dev
   - name: deploy-dev
     if: branch = dev
-
