--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,6 +14,6 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      run:
-        - "sed -i \"s/LIVE/${TRAVIS_BUILD_NUMBER}/g\" pom.xml"
-        - "mvn -q -B -s maven-settings.xml clean compile assembly:single deploy"
+      run: |
+        sed -i \"s/LIVE/${TRAVIS_BUILD_NUMBER}/g\" pom.xml
+        mvn -q -B -s maven-settings.xml clean compile assembly:single deploy
