--- a/pom.xml
+++ b/pom.xml
@@ -260,5 +260,12 @@
             <artifactId>jline</artifactId>
             <version>2.14.2</version>
         </dependency>
+
+        <!-- Websocket Server -->
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.4.0</version>
+        </dependency>
     </dependencies>
 </project>
