--- a/pom.xml
+++ b/pom.xml
@@ -230,7 +230,7 @@
         <dependency>
             <groupId>net.twasi</groupId>
             <artifactId>twitch-web-api</artifactId>
-            <version>2391519e998d2d8b5ebfc27a4d6985d93ab797ca</version>
+            <version>1.0.0</version>
         </dependency>
 
         <!-- PircBotX -->
