--- a/pom.xml
+++ b/pom.xml
@@ -235,9 +235,9 @@
 
         <!-- PircBotX -->
         <dependency>
-            <groupId>org.pircbotx</groupId>
+            <groupId>net.twasi</groupId>
             <artifactId>pircbotx</artifactId>
-            <version>2.1</version>
+            <version>2.3</version>
         </dependency>
 
         <!-- YouTube API -->
