--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.twasi</groupId>
     <artifactId>twasi-core</artifactId>
-    <version>local-1.0.0</version>
+    <version>1.0.4</version>
 
     <build>
         <plugins>
@@ -73,7 +73,7 @@
         <repository>
             <id>central</id>
             <name>libs-release</name>
-            <url>https://nexus.twasi.net/nexus/content/repositories/releases/</url>
+            <url>https://nexus.twasi.net/repository/maven-releases/</url>
         </repository>
         <repository>
             <id>jcenter</id>
@@ -85,12 +85,12 @@
         <repository>
             <id>central</id>
             <name>libs-release-local</name>
-            <url>https://nexus.twasi.net/nexus/content/repositories/releases/</url>
+            <url>https://nexus.twasi.net/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
             <id>snapshots</id>
             <name>artifactory-snapshots</name>
-            <url>https://nexus.twasi.net/nexus/content/repositories/snapshots/</url>
+            <url>https://nexus.twasi.net/repository/maven-snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 
@@ -235,9 +235,9 @@
 
         <!-- PircBotX -->
         <dependency>
-            <groupId>net.twasi</groupId>
+            <groupId>org.pircbotx</groupId>
             <artifactId>pircbotx</artifactId>
-            <version>2.3</version>
+            <version>2.1</version>
         </dependency>
 
         <!-- YouTube API -->
