--- a/pom.xml
+++ b/pom.xml
@@ -203,17 +203,17 @@
         <dependency>
             <groupId>com.graphql-java</groupId>
             <artifactId>graphql-java</artifactId>
-            <version>12.0</version>
+            <version>2020-08-25T07-38-57-05deb85</version>
         </dependency>
         <dependency>
-            <groupId>com.graphql-java-kickstart</groupId>
+            <groupId>com.graphql-java</groupId>
             <artifactId>graphql-java-tools</artifactId>
-            <version>5.6.0</version>
+            <version>5.2.4</version>
         </dependency>
         <dependency>
             <groupId>com.graphql-java-kickstart</groupId>
             <artifactId>graphql-java-servlet</artifactId>
-            <version>7.5.0</version>
+            <version>9.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
