--- a/pom.xml
+++ b/pom.xml
@@ -144,9 +144,9 @@
 
         <!-- Morphia (MongoDB) -->
         <dependency>
-            <groupId>org.mongodb.morphia</groupId>
-            <artifactId>morphia</artifactId>
-            <version>1.3.2</version>
+            <groupId>dev.morphia.morphia</groupId>
+            <artifactId>core</artifactId>
+            <version>1.6.0</version>
         </dependency>
         <!-- JUnit -->
         <dependency>
@@ -203,12 +203,12 @@
         <dependency>
             <groupId>com.graphql-java</groupId>
             <artifactId>graphql-java</artifactId>
-            <version>2020-08-25T07-38-57-05deb85</version>
+            <version>13.0</version>
         </dependency>
         <dependency>
-            <groupId>com.graphql-java</groupId>
+            <groupId>com.graphql-java-kickstart</groupId>
             <artifactId>graphql-java-tools</artifactId>
-            <version>5.2.4</version>
+            <version>5.6.0</version>
         </dependency>
         <dependency>
             <groupId>com.graphql-java-kickstart</groupId>
